# autonomous_research_agent

./: README.md  pyproject.toml
app/agents/: notes_agent.py  planner.py  researcher.py  summarizer.py
app/models/: schemas.py
app/prompts/: notes.txt  planner.txt
app/tools/: scrapper.py  web_search.py
frontend/: streamlit_app.py
prompts/: summarize.txt
