[project]
name = "autonomous-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "langchain>=1.3.11",
    "langchain-groq>=1.1.3",
    "pydantic>=2.13.4",
    "tavily>=1.1.0",
]
